--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,16 @@
 certifi==2020.6.20
+chardet==3.0.4
 cycler==0.10.0
-DateTime==4.3
-future==0.18.2
-iso8601==0.1.12
+idna==2.10
 kiwisolver==1.2.0
 matplotlib==3.2.2
-mkl-fft==1.1.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-numpy==1.18.5
+numpy==1.19.0
 pandas==1.0.5
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 PyVISA==1.10.1
-PyYAML==5.3.1
-serial==0.0.97
+PyVISA-py==0.4.1
+requests==2.24.0
 six==1.15.0
-wincertstore==0.2
-zope.interface==5.1.0
+urllib3==1.25.9
